[gd_scene load_steps=8 format=3 uid="uid://mahg2nbldblf"]

[ext_resource type="Script" uid="uid://dc256idbg6umu" path="res://level/level.gd" id="1_dbc2d"]
[ext_resource type="Theme" uid="uid://h1f7iqhh7ycb" path="res://theme/kenneyUI-yellow.tres" id="2_ktfr2"]
[ext_resource type="PackedScene" uid="uid://c0rltbdwa65jf" path="res://level/place_for_tower/place_for_tower.tscn" id="3_qohg2"]
[ext_resource type="Texture2D" uid="uid://coxkud27kxx4r" path="res://level/map2.png" id="3_vkbyq"]
[ext_resource type="Script" uid="uid://m1vo0myw6iol" path="res://level/wave_generator/wave_generator.gd" id="4_vkbyq"]

[sub_resource type="Curve2D" id="Curve2D_qohg2"]
_data = {
"points": PackedVector2Array(0.811934, 0.479215, -0.811934, -0.479215, 1058.44, 1285.58, 10.3547, 16.5611, -10.3547, -16.5611, 1035.95, 1212.36, 34.1032, 23.8404, -34.1032, -23.8404, 980.363, 1165.14, 33.411, 9.49215, -33.411, -9.49215, 754.981, 1121.75, 44.6448, 32.5666, -44.6448, -32.5666, 582.154, 1041.35, 6.02834, 21.6731, -6.02834, -21.6731, 502.391, 904.805, 32.9983, 50.2068, -32.9983, -50.2068, 468.957, 722.31, 0, 0, 0, 0, 361.825, 644.464, 20.8819, 12.6562, -20.8819, -12.6562, 249.639, 597.246, 28.4193, 21.6731, -28.4193, -21.6731, 148.571, 525.78, 0.647026, 28.4958, -0.647026, -28.4958, 110.165, 408.373, -25.1324, 28.5967, 25.1324, -28.5967, 162.72, 293.518, -34.4792, -1.43656, 34.4792, 1.43656, 301.184, 245.024, -50.2648, -12.8966, 50.2648, 12.8966, 506.353, 322.87, -35.827, 12.8966, 35.827, -12.8966, 652.902, 321.594, -56.6816, 8.4108, 56.6816, -8.4108, 891.423, 98.2648, 0, 0, 0, 0, 1049.61, 95.6508, -55.8902, -23.0456, 55.8902, 23.0456, 1194.61, 130.027, -6.41678, -33.0825, 6.41678, 33.0825, 1281.61, 229.188, 17.1114, -29.1574, -17.1114, 29.1574, 1271.52, 349.503, 29.4103, -17.3823, -29.4103, 17.3823, 1162.29, 451.763, 29.4103, -12.8966, -29.4103, 12.8966, 951.054, 520.676, 21.3519, -27.1388, -21.3519, 27.1388, 829.771, 594.693, -16.1756, -48.1714, 16.1756, 48.1714, 793.652, 738.215, -14.1997, -13.7109, 14.1997, 13.7109, 853.017, 826.956, -36.8805, -10.8555, 36.8805, 10.8555, 968.235, 878.002, -28.4691, 24.425, 28.4691, -24.425, 1288.62, 848.651, -40.1156, -18.3187, 40.1156, 18.3187, 1515.02, 863.965, 0.647026, -51.5638, -0.647026, 51.5638, 1604.97, 971.162, 33.0653, -4.59834, -33.0653, 4.59834, 1458.42, 1140.89, 0, 0, 0, 0, 1373.65, 1272.36)
}
point_count = 31

[sub_resource type="CircleShape2D" id="CircleShape2D_oem8r"]
radius = 100.005

[node name="Level" type="Node2D" node_paths=PackedStringArray("camera")]
script = ExtResource("1_dbc2d")
camera = NodePath("Camera2D")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -33.5
offset_right = -100.0
offset_bottom = -33.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("2_ktfr2")

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 716.0
offset_top = -506.0
offset_right = 1064.0
offset_bottom = -230.0

[node name="GoldInput" type="Label" parent="CanvasLayer/Control/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.231
anchor_bottom = 0.231
offset_left = 124.0
offset_top = -42.756
offset_right = 332.0
offset_bottom = 40.244
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[node name="HpInput" type="Label" parent="CanvasLayer/Control/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.535
anchor_bottom = 0.535
offset_left = 124.0
offset_top = -47.16
offset_right = 188.0
offset_bottom = 35.84
vertical_alignment = 1

[node name="Hp" type="Label" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.535
anchor_bottom = 0.535
offset_left = 24.0
offset_top = -41.16
offset_right = 106.0
offset_bottom = 41.84
theme_override_font_sizes/font_size = 60
text = "‚ô•Ô∏è"

[node name="Gold" type="Label" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.231
anchor_bottom = 0.231
offset_left = 24.0
offset_top = -39.756
offset_right = 106.0
offset_bottom = 43.244
theme_override_font_sizes/font_size = 60
text = "üí∞"

[node name="Button" type="Button" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = 49.3745
offset_right = 88.0
offset_bottom = 112.626
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "–ú–µ–Ω—é"

[node name="Button" type="Button" parent="CanvasLayer/Control"]
process_mode = 3
layout_mode = 0
offset_left = -191.0
offset_top = -422.0
offset_right = -135.0
offset_bottom = -391.0
keep_pressed_outside = true
text = "–ü–∞—É–∑–∞"

[node name="StartWave" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -349.0
offset_top = -422.0
offset_right = -259.0
offset_bottom = -391.0
text = "Next wave
"

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
visible = false
show_behind_parent = true
z_as_relative = false
offset_right = 1920.0
offset_bottom = 1083.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1083)
render_target_update_mode = 0

[node name="ChatGptImage8–ê–ø—Ä_2025–ì_,033356" type="Sprite2D" parent="."]
z_index = -100
scale = Vector2(1.25, 1.05469)
texture = ExtResource("3_vkbyq")
centered = false
metadata/_edit_lock_ = true

[node name="2Forest-Stage" type="Sprite2D" parent="."]
z_index = -10
centered = false

[node name="Path2D" type="Path2D" parent="."]
unique_name_in_owner = true
position = Vector2(3, 89)
scale = Vector2(0.989429, 0.783597)
curve = SubResource("Curve2D_qohg2")

[node name="EnemyTimer" type="Timer" parent="."]

[node name="Home" type="Area2D" parent="."]
position = Vector2(1289.93, 1168.53)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Home"]
position = Vector2(78.0699, 11.47)
shape = SubResource("CircleShape2D_oem8r")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 542)
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080
position_smoothing_enabled = true

[node name="Places" type="Node2D" parent="."]

[node name="PlaceForTower" parent="Places" instance=ExtResource("3_qohg2")]
position = Vector2(426, 863)

[node name="PlaceForTower2" parent="Places" instance=ExtResource("3_qohg2")]
position = Vector2(585, 437)

[node name="PlaceForTower3" parent="Places" instance=ExtResource("3_qohg2")]
position = Vector2(995, 842)

[node name="PlaceForTower4" parent="Places" instance=ExtResource("3_qohg2")]
position = Vector2(120, 591)

[node name="PlaceForTower5" parent="Places" instance=ExtResource("3_qohg2")]
position = Vector2(661, 1004)

[node name="PlaceForTower6" parent="Places" instance=ExtResource("3_qohg2")]
position = Vector2(1022, 257)

[node name="PlaceForTower7" parent="Places" instance=ExtResource("3_qohg2")]
position = Vector2(702, 595)

[node name="Wave_generator" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_vkbyq")
metadata/_custom_type_script = "uid://m1vo0myw6iol"

[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/StartWave" to="." method="start_wave"]
[connection signal="timeout" from="EnemyTimer" to="." method="next_enemy"]
[connection signal="area_entered" from="Home" to="." method="_on_home_area_entered"]
[connection signal="add_enemy" from="Wave_generator" to="." method="_on_wave_generator_add_enemy"]
[connection signal="wave_ended" from="Wave_generator" to="." method="_on_wave_generator_wave_ended"]
